Fixed some spacing problems. Just added a br for now.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
 $icon-font-path: '../fonts/';
-$font-family-base: proxima-nova, lato !default;
+$font-family-base: proxima-nova, lato, "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
@@ -101,11 +101,13 @@ h2 {
 
 p.lead {
   font-weight: 200;
+  line-height: 1.5em;
 
 }
 
 p.email {
   font-size: 16px;
+  font-weight: 300;
 
 }
 
